...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nameLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_name"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

...
        android:fontFamily="@font/proxima_nova_extra_condensed_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_name" />

    <Spinner
        android:id="@+id/spinner_productType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/Product_type_of_product_array"
...
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_productType" />

    <Spinner
        android:id="@+id/spinner_productCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:prompt="@string/Product_category"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_expirationDateLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_expirationDate"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_productionDateLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_productionDate"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_compositionLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_composition"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_healingPropertiesLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_healingProperties"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dosageLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_dosage"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_volumeLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_volume"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weightLabel"
        tools:ignore="Autofill">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/edittext_weight"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_hasSugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Product_has_sugar"
...
