<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019-2021
  ~ Mateusz Hermanowicz - All rights reserved.
  ~ My Pantry
  ~ https://www.mypantry.eu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        <group>
                <item
                    android:title="@string/ProductDetailsActivity_filter"
                    android:icon="@drawable/ic_search"
                    android:enabled="false"
                    android:checkable="false"/>
        </group>
        <group>
                <item
                    android:id="@+id/filter_name"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_name"/>
                <item
                    android:id="@+id/filter_expiration_date"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_expiration_date"/>
                <item
                    android:id="@+id/filter_production_date"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_production_date"/>
                <item
                    android:id="@+id/filter_product_type"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_type"/>
                <item
                    android:id="@+id/filter_volume"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_volume"/>
                <item
                    android:id="@+id/filter_weight"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_weight"/>
                <item
                    android:id="@+id/filter_taste"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_taste"/>
                <item
                    android:id="@+id/filter_product_features"
                    android:icon="@drawable/ic_check_box_false"
                    android:title="@string/Product_features" />
        </group>
        <group>
                <item
                    android:id="@+id/filter_clear"
                    android:icon="@drawable/ic_clear"
                    android:title="@string/MyPantryActivity_clear_filters" />
        </group>
</menu>